# Minecraft-jni-client

./: .gitignore  CMakeLists.txt  CrashDiagnostics.cpp  CrashDiagnostics.hpp  README.md  main.cpp
classes/: Entity.cpp  Entity.hpp  minecraft.cpp  minecraft.hpp
imgui/backends/: imgui_impl_opengl3.cpp
jni/: JniEnvironment.cpp  JniEnvironment.hpp  MinecraftMappings.hpp
minhook/: CMakeLists.txt
modules/: Esp.cpp  Esp.hpp  FastBreak.cpp  FastBreak.hpp  FastPlace.cpp  FastPlace.hpp  Velocity.cpp  Velocity.hpp  click.cpp  click.hpp  hitResult.cpp  hitResult.hpp
ui/: EspOverlayRenderer.cpp  EspOverlayRenderer.hpp  ImGuiMenu.cpp  ImGuiMenu.hpp  UiHookManager.cpp  UiHookManager.hpp
